doc: 断念メモを記録。